# fheon

./: .gitignore  CMakeLists.txt  README.md
HEmodels/: LeNet5.cpp  ResNet20Basic.cpp  ResNet20DataPreprocessed.cpp  ResNet20MultiChannels.cpp  ResNet20MultiChansAndSlots.cpp  ResNet20Optimized.cpp  ResNet34.cpp  ResNet34Optimized.cpp  VGG11.cpp  VGG11Optimized.cpp  VGG16.cpp  VGG16Optimized.cpp
python/: .gitignore  exporting_weights.py  resnet20Model.py
results/: accuracy.py
results/lenet5/: fhepredictions.txt
results/resnet34/: truelabels.txt
src/: FHEONANNController.cpp  FHEONHEController.cpp  FHEONHEController.h
weights/lenet5/: Conv1_bias.csv  Conv1_weight.csv  Conv2_bias.csv  Conv2_weight.csv  FC1_bias.csv  FC1_weight.csv  FC2_bias.csv  FC2_weight.csv  FC3_bias.csv  FC3_weight.csv
weights/resnet20/: layer0_conv1_bias.csv  layer0_conv1_weight.csv  layer1_block1_conv1_bias.csv  layer1_block1_conv1_weight.csv  layer1_block1_conv2_bias.csv  layer1_block1_conv2_weight.csv  layer1_block2_conv1_bias.csv  layer1_block2_conv1_weight.csv  layer1_block2_conv2_bias.csv  layer1_block2_conv2_weight.csv  layer1_block3_conv1_bias.csv  layer1_block3_conv1_weight.csv  layer1_block3_conv2_bias.csv  layer1_block3_conv2_weight.csv  layer2_block1_conv1_bias.csv  layer2_block1_conv1_weight.csv  layer2_block1_conv2_bias.csv  layer2_block1_conv2_weight.csv  layer2_block1_shortcut_bias.csv  layer2_block1_shortcut_weight.csv  layer2_block2_conv1_bias.csv  layer2_block2_conv1_weight.csv  layer2_block2_conv2_bias.csv  layer2_block2_conv2_weight.csv  layer2_block3_conv1_bias.csv  layer2_block3_conv1_weight.csv  layer2_block3_conv2_bias.csv  layer2_block3_conv2_weight.csv  layer3_block1_conv1_bias.csv  layer3_block1_conv1_weight.csv  layer3_block1_conv2_bias.csv  layer3_block1_conv2_weight.csv  layer3_block1_shortcut_bias.csv  layer3_block1_shortcut_weight.csv  layer3_block2_conv1_bias.csv  layer3_block2_conv1_weight.csv  layer3_block2_conv2_bias.csv  layer3_block2_conv2_weight.csv  layer3_block3_conv1_bias.csv  layer3_block3_conv1_weight.csv  (+4 more)
weights/resnet34/: layer0_conv1_bias.csv  layer0_conv1_weight.csv  layer1_block1_conv1_bias.csv  layer1_block1_conv1_weight.csv  layer1_block1_conv2_bias.csv  layer1_block1_conv2_weight.csv  layer1_block2_conv1_bias.csv  layer1_block2_conv1_weight.csv  layer1_block2_conv2_bias.csv  layer1_block2_conv2_weight.csv  layer1_block3_conv1_bias.csv  layer1_block3_conv1_weight.csv  layer1_block3_conv2_bias.csv  layer1_block3_conv2_weight.csv  layer2_block1_conv1_bias.csv  layer2_block1_conv1_weight.csv  layer2_block1_conv2_bias.csv  layer2_block1_conv2_weight.csv  layer2_block1_shortcut_bias.csv  layer2_block1_shortcut_weight.csv  layer2_block2_conv1_bias.csv  layer2_block2_conv1_weight.csv  layer2_block2_conv2_bias.csv  layer2_block2_conv2_weight.csv  layer2_block3_conv1_bias.csv  layer2_block3_conv1_weight.csv  layer2_block3_conv2_bias.csv  layer2_block3_conv2_weight.csv  layer2_block4_conv1_bias.csv  layer2_block4_conv1_weight.csv  layer2_block4_conv2_bias.csv  layer2_block4_conv2_weight.csv  layer3_block1_conv1_bias.csv  layer3_block1_conv1_weight.csv  layer3_block1_conv2_bias.csv  layer3_block1_conv2_weight.csv  layer3_block1_shortcut_bias.csv  layer3_block1_shortcut_weight.csv  layer3_block2_conv1_bias.csv  layer3_block2_conv1_weight.csv  (+34 more)
weights/vgg11/: conv1_bias.csv  conv1_weight.csv  conv2_bias.csv  conv2_weight.csv  conv3_bias.csv  conv3_weight.csv  conv4_bias.csv  conv4_weight.csv  conv5_bias.csv  conv5_weight.csv  conv6_bias.csv  conv6_weight.csv  conv7_bias.csv  conv7_weight.csv  conv8_bias.csv  conv8_weight.csv  fc1_bias.csv  fc1_weight.csv  fc2_bias.csv  fc3_bias.csv  fc3_weight.csv
weights/vgg16/: conv10_bias.csv  conv10_weight.csv  conv11_bias.csv  conv11_weight.csv  conv12_bias.csv  conv12_weight.csv  conv13_bias.csv  conv13_weight.csv  conv1_bias.csv  conv1_weight.csv  conv2_bias.csv  conv2_weight.csv  conv3_bias.csv  conv3_weight.csv  conv4_bias.csv  conv4_weight.csv  conv5_bias.csv  conv5_weight.csv  conv6_bias.csv  conv6_weight.csv  conv7_bias.csv  conv7_weight.csv  conv8_bias.csv  conv8_weight.csv  conv9_bias.csv  conv9_weight.csv  fc1_bias.csv  fc1_weight.csv  fc2_bias.csv  fc3_bias.csv  fc3_weight.csv
